Requiring illuminate components instead

--- a/composer.json
+++ b/composer.json
@@ -15,8 +15,8 @@
         }
     ],
     "require": {
-        "php": "^7.3|^7.4",
-        "laravel/framework": "^7.0|^8.0",
+        "php": "^7.3",
+        "illuminate/database": "^7.0|^8.0",
         "themsaid/wink": "^1.2.0"
     },
     "require-dev": {
